Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14285

Test KVM AHK and Test VBox: "Assertion failed: !(vacb->ReferenceCount == 0 && vacb->Dirty)" at "ntoskrnl/cc/view.c, line 102", after new Cc lazy writer

    XMLWordPrintable

Details

    Description

      https://build.reactos.org/builders/Test%20VBox?numbuilds=200

      Only "lucky"/random examples, as Test VBox is plagued by ONLINE-758. These 2 cases are actually all of them!
      Wrt
      {{Jan 23 18:55 c7ad200f8bc1... failure #6826}}
      Reimplement the lazy writer [...]
      and follow-ups.

      {{Jan 31 12:43 912434849f77... failure #6937}}
      {{Jan 31 20:52 f8d58bba3883... failure #6943}} <-- Latest Cc lazy writer fix.

      *** Assertion failed: !(vacb->ReferenceCount == 0 && vacb->Dirty)
      ***   Source File: /srv/buildbot/Build_GCCLin_x86/build/ntoskrnl/cc/view.c, line 102
       
      Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)? 
      kdb:>
       o
      Execute '.cxr F6DA3398' to dump context
       
      Entered debugger on embedded INT3 at 0x0008:0x8094acbe.
      kdb:>
       bt
      Eip:
      <NTOSKRNL.EXE:14acbf (:0 (DbgBreakPoint))>
      Frames:
      <NTOSKRNL.EXE:6827 (ntoskrnl/cc/view.c:102 (CcRosVacbDecRefCount_))>
      <NTOSKRNL.EXE:85db (ntoskrnl/cc/view.c:539 (CcRosReleaseVacb))>
      <NTOSKRNL.EXE:64b3 (ntoskrnl/cc/pin.c:292 (CcUnpinDataForThread))>
      <NTOSKRNL.EXE:651a (ntoskrnl/cc/pin.c:266 (CcUnpinData))>
      <fastfat.sys:8089>
      ...

      Attachments

        1. unmark_dirty.diff
          1.0 kB
        2. vacb_count.diff
          6 kB
        3. vacb_count.diff
          5 kB
        4. vacb_count.diff
          4 kB
        5. vacb_count.diff
          0.9 kB

        Issue Links

          Activity

            People

              Heis Spiter Pierre Schweitzer
              Serge Gautherie Serge Gautherie
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: