[NTOSKRNL] Add an assert against VACB reference count overflow. Very likely to be hit...

CORE-14285